[package]
name = "gr-rodio"
description = "GR Rodio is a simple wrapper of Rodio made for Geometry Rays Fyre"
version = "1.1.0"
edition = "2024"
authors = ["Puppet <doggyandkira2013@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Geometry-Rays/gr-rodio"
license-file = "LICENSE"
keywords = ["audio", "mp3", "sound"]

[dependencies]
rodio = "0.20.1"
